go vercel for test

--- a/src/styles/_globales.scss
+++ b/src/styles/_globales.scss
@@ -2,8 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 
 $color1: #077949;
-$color2: #e4eba0;
+$color2: #ff831e;
 $color3: #fff;
 $color4: #2d8843;
+$color5: #412915;
 $fontRoboto: 'Roboto Mono', monospace;
 $fontOswald: 'Oswald', sans-serif;
