--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,16 @@
 @import "_globales";
 
 body {
+  height: 100vh;
+  margin: 0;
+  position: relative;
   font-family: $fontOswald;
+  background-image: url("../../public/images/triangles_pattern.webp");
   .button {
-    
+    padding: 5px;
+    margin: 5px;
+    background-color: $color2;
+    border-radius: 50px;
   }
   header {
     h1 {
@@ -11,9 +18,26 @@ body {
     }
   }
   nav {
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
     display: flex;
     justify-content: center;
     gap: 20px;
+    background-color: $color4;
+    .navLink {
+      padding: 5px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 10px;
+      color: $color3;
+      text-decoration: none;
+    }
+    .icon {
+      font-size: 30px;
+    }
   }
   form {
     display: flex;
@@ -25,17 +49,23 @@ body {
     flex-direction: column;
     align-items: center;
     table {
+      width: 95%;
       border-collapse: collapse;
       padding: 10px;
-      // border-radius: 10px;
+      border-radius: 10px;
       text-align: center;
       background-color: $color1;
+      overflow: hidden;
+      border-radius: 10px;
       td {
         color: $color3;
       }
-      thead {
+      thead,
+      tfoot {
+        background-color: $color5;
         th {
-          background-color: $color2;
+          color: $color3;
+          font-size: 20px;
         }
       }
       tbody {
