--- a/src/styles/_globales.scss
+++ b/src/styles/_globales.scss
@@ -4,7 +4,7 @@
 $color1: #077949;
 $color2: #ff831e;
 $color3: #fff;
-$color4: #2d8843;
-$color5: #412915;
+$color4: #096b2a;
+$color5: #034611;
 $fontRoboto: 'Roboto Mono', monospace;
 $fontOswald: 'Oswald', sans-serif;
