--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "_globales";
+@import "_animations";
 
 body {
   margin: 0;
@@ -10,6 +11,17 @@ body {
     margin: 5px;
     background-color: $color2;
     border-radius: 50px;
+    color: inherit;
+    border: none;
+    cursor: pointer;
+    outline: inherit;
+  }
+  .loader {
+    margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: spinner 2s infinite;
   }
   header {
     display: flex;
