--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -66,6 +66,9 @@ body {
     align-items: center;
     flex-grow: 1;
     gap: 20px;
+    b {
+      color: $color1;
+    }
     .newGameBackground {
       width: 100%;
       height: 100%;
@@ -77,9 +80,28 @@ body {
       background-color: #3b3a3ab0;
     }
     .newGame {
-      width: 80%;
       position: absolute;
-      top: 30%;
+      top: 5%;
+      display: flex;
+      flex-wrap: wrap;
+      .choice {
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        h4 {
+          width: 100%;
+          text-align: center;
+          margin: 0;
+        }
+        .points {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+        }
+      }
     }
     form {
       padding: 10px;
@@ -89,6 +111,7 @@ body {
       gap: 10px;
       background-color: $color1;
       border-radius: 10px;
+      
       input {
         width: 100%;
         padding: 5px;
