--- a/src/styles/_globales.scss
+++ b/src/styles/_globales.scss
@@ -6,6 +6,7 @@ $color2: #ff831e;
 $color3: #fff;
 $color4: #096b2a;
 $color5: #034611;
+$color6: black;
 $color6Alpha: #115a21;
 $fontRoboto: 'Roboto Mono', monospace;
 $fontOswald: 'Oswald', sans-serif;
