--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,6 +45,7 @@ body {
     }
   }
   header {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -84,6 +85,16 @@ body {
     align-items: center;
     flex-grow: 1;
     gap: 20px;
+
+    h3 {
+      width: 100%;
+      text-align: center;
+      margin: 0;
+    }
+    h2 {
+      width: 100%;
+      text-align: center;
+    }
     b {
       color: $color1;
     }
@@ -122,6 +133,9 @@ body {
       }
     }
     form {
+      width: 80%;
+      min-width: 300px;
+      max-width: 500px;
       padding: 10px;
       display: flex;
       flex-direction: column;
@@ -144,6 +158,17 @@ body {
         justify-content: center;
         color: $color3;
         font-size: 25px;
+      }
+    }
+    .globalRanking {
+      tbody tr:first-child{
+        background-color: #cfbb00;
+      }
+      tbody tr:nth-child(2){
+        background-color: #686868;
+      }
+      tbody tr:nth-child(3){
+        background-color: #351d1d;
       }
     }
     table {
