--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,7 +45,7 @@ body {
     }
   }
   header {
-    margin-top: 20px;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -99,43 +99,55 @@ body {
       color: $color1;
     }
     .newGameBackground {
+      
       width: 100%;
-      height: 100%;
+      height: 100vh;
       position: absolute;
       top: 0;
       display: flex;
       flex-direction: column;
+      gap: 0;
       align-items: center;
       background-color: #3b3a3ab0;
     }
     .newGame {
+      width: 90%;
       position: absolute;
-      top: 5%;
-      display: flex;
-      flex-wrap: wrap;
+      top: 2%;
+      gap: 0;
+      color: $color3;
+
       .choice {
-        width: 90%;
+        width: 100%;
+        padding: 2px;
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: space-around;
-        flex-wrap: wrap;
-        h4 {
-          width: 100%;
+        border: 1px solid $color5;
+        border-radius: 5px;
+        legend {
           text-align: center;
-          margin: 0;
+          font-weight: bold;
+          color: $color5;
+
         }
         .points {
           width: 100%;
           display: flex;
           justify-content: space-between;
+          gap: 20px;
+          h5 {
+            width: 33%;
+            text-align: center;
+            font-weight: normal;
+          }
         }
       }
     }
     form {
       width: 80%;
       min-width: 300px;
-      max-width: 500px;
+      max-width: 600px;
       padding: 10px;
       display: flex;
       flex-direction: column;
@@ -168,7 +180,7 @@ body {
         background-color: #686868;
       }
       tbody tr:nth-child(3){
-        background-color: #351d1d;
+        background-color: #563333;
       }
     }
     table {
