--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -54,29 +54,48 @@ body {
       text-align: center;
     }
   }
-  nav {
-    width: 100%;
-    height: 80px;
+  footer {
     position: fixed;
     bottom: 0;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 20px;
+    width: 100%;
+    height: 90px;
     background-color: $color5;
-    .navLink {
-      padding: 5px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-size: 10px;
-      color: $color3;
-      text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+    font-size: 12px;
+    p { 
+      margin: 0;
+      color: $color1;
     }
-    .icon {
-      font-size: 40px;
+    a {
+      // margin: 5px;
+      text-decoration: none;
+      color: $color2;
+    }
+    nav {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      gap: 20px;
+      
+      .navLink {
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 10px;
+        color: $color3;
+        text-decoration: none;
+        text-align: center;
+      }
+      .icon {
+        font-size: 40px;
+      }
     }
   }
+
   main {
     padding-bottom: 100px;
     height: 100%;
