--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,6 +21,10 @@ body {
     border: none;
     cursor: pointer;
     outline: inherit;
+    a {
+      text-decoration: none;
+      color: $color6;
+    }
   }
   .icon2 {
     color: $color2;
@@ -56,29 +60,25 @@ body {
   }
   footer {
     position: fixed;
-    bottom: 0;
+    bottom: -1px;
     width: 100%;
-    height: 90px;
+    height: 100px;
     background-color: $color5;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     text-align: center;
     font-size: 12px;
-    p { 
-      margin: 0;
-      color: $color1;
-    }
     a {
       // margin: 5px;
       text-decoration: none;
-      color: $color2;
+      color: $color1;
     }
     nav {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      gap: 20px;
+      // gap: 20px;
       
       .navLink {
         padding: 5px;
@@ -97,6 +97,7 @@ body {
   }
 
   main {
+    margin-bottom: 20px;
     padding-bottom: 100px;
     height: 100%;
     display: flex;
@@ -120,7 +121,7 @@ body {
     .newGameBackground {
       
       width: 100%;
-      height: 100vh;
+      height: 110%;
       position: absolute;
       top: 0;
       display: flex;
@@ -220,6 +221,8 @@ body {
         th {
           color: $color3;
           font-size: 20px;
+          font-weight: normal;
+          text-align: center;
         }
       }
       thead {
@@ -239,6 +242,13 @@ body {
         }
       }
 
+    }
+    ul {
+      width: 80%;
+      font-size: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
   }
 }
