--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -244,7 +244,9 @@ body {
 
     }
     ul {
+      margin: 0 auto;
       width: 80%;
+      max-width: 600px;
       font-size: 20px;
       display: flex;
       flex-direction: column;
